# PandasSocrata

./: .gitignore  LICENSE  README.md  pyproject.toml
APP/: Appsocrata.py
Codigo/: cuaderno.ipynb
